--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
   </head>
   <body>
     <h1>Navid Rahimi Danesh</h1>
+    <p>
+      You can download my CV <a href="https://github.com/Navidda/resume/raw/master/Resume%20CV.pdf">here</a>
+    </p>
   </body>
 </html>
