--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Navid Rahimi Danesh</title>
-  </head>
-  <body>
+
+<head>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script src="js/bootstrap.min.js"></script>
+  <title>Navid Rahimi Danesh</title>
+</head>
+
+<body>
+  <div class="container">
     <h1>Navid Rahimi Danesh</h1>
-    <p>
-      You can download my CV <a href="https://github.com/Navidda/resume/raw/master/Resume%20CV.pdf">here</a>
-    </p>
-  </body>
+    <div class="row">
+      <p class="col">
+        You can download my CV <a href="https://github.com/Navidda/resume/raw/master/Resume%20CV.pdf">here</a>
+      </p>
+      <div class="col">
+        <img src="img/photo.jpg" class="img-fluid" width="50%">
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
