change photo and colors

--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 
 <head>
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
   <script src="js/bootstrap.min.js"></script>
   <title>Navid Rahimi Danesh</title>
 </head>
 
 <body>
-  <div class="container">
-    <h1>Navid Rahimi Danesh</h1>
+  <div class="container my-5">
     <div class="row">
-      <p class="col">
-        You can download my CV <a href="https://github.com/Navidda/resume/raw/master/Resume%20CV.pdf">here</a>
-      </p>
       <div class="col">
-        <img src="img/photo.jpg" class="img-fluid" width="50%">
+        <h1>Navid Rahimi Danesh</h1>
+        <p>
+          You can download my CV <a href="https://github.com/Navidda/resume/raw/master/Resume%20CV.pdf">here</a>
+        </p>
+      </div>
+      <div class="col">
+        <img src="img/photo.jpeg" class="img-fluid" width="80%">
       </div>
     </div>
   </div>
