--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
   <div class="container my-5">
     <div class="row">
-      <div class="col">
+      <div class="col" style="min-width: 600px;">
         <h1>Navid Rahimi Danesh</h1>
         <p>
           You can download my CV <a href="https://github.com/Navidda/resume/raw/master/Resume%20CV.pdf">here</a>
         </p>
       </div>
-      <div class="col">
+      <div class="col" style="min-width: 200px; max-width: 400px;">
         <img src="img/photo.jpeg" class="img-fluid" width="80%">
       </div>
     </div>
