--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
       <div class="col" style="min-width: 600px;">
         <h1>Navid Rahimi Danesh</h1>
         <p>
-          You can download my CV <a href="https://github.com/Navidda/resume/raw/master/Resume%20CV.pdf">here</a>
+          Contact me on:
+          <a href="https://www.linkedin.com/in/navidda/">
+            <img width="100" src="img/LI-Logo.png"/>
+          </a>
         </p>
       </div>
       <div class="col" style="min-width: 200px; max-width: 400px;">
         <img src="img/photo.jpeg" class="img-fluid" width="80%">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
       </div>
     </div>
   </div>
